Todos os scripts corrigidos.

--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,4 @@ Scripts/data_test/
 Scripts/dataset_anonimizado/
 Scripts/dataset_anonimizado_padded/
 Scripts/yolo11s-cls.pt
+Scripts/Amostras 2D
