--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,8 @@ Scripts/dataset_anonimizado/
 Scripts/dataset_anonimizado_padded/
 Scripts/yolo11s-cls.pt
 Scripts/Amostras 2D
+
+datasets/
+yolo_models/
+yolo11n.pt
+runs/
