--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,4 @@ Scripts/dataset_anonimizado/
 Scripts/dataset_anonimizado_padded/
 Scripts/yolo11s-cls.pt
 Scripts/Amostras 2D
+heat_map/best (1).pt
